# Byok

./: .gitignore  .prettierignore  LICENSE  README.md  bindings.ts  build_and_sign.sh  package-lock.json  package.json  static  tailwind.config.js  vite.config.js
.github/workflows/: release.yml  test.yml
assets/: add-rounded-corners.py  add-transparent-space.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240831123721_init.sql  20251213154054_add_custom_providers.sql
src-tauri/src/: data.rs  db.rs  errors.rs  lib.rs  main.rs  providers.rs  settings.rs  types.rs  utils.rs
src-tauri/src/LLMprovider/: anthropic.rs  types.rs
src-tauri/src/db/: chats.rs  init.rs  messages.rs  mod.rs  models.rs  providers_db.rs
src-tauri/src/llm_providers/: anthropic.rs  default.rs  enums.rs  mod.rs  openai.rs  traits.rs  types.rs
src-tauri/src/providers/: groqcloud.rs  mistralai.rs  openai.rs  traits.rs
src-tauri/tests/: tests.rs
src/lib/: stores.ts
src/lib/components/: ChatInput.svelte  ChatItem.svelte  ChatSidebar.svelte  MessageItem.svelte  MessageList.svelte  ModelSelector.svelte  index.ts
src/lib/modals/: Settings.svelte
src/routes/: +page.svelte
