[package]
name = "byok"
version = "1.0.0"
description = "Bring your own keys"
default-run = "byok"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7", features = [ "notification-all", "shell-open", "path-all", "dialog-message",
	"devtools",
] }
rfd = "0.10"
tokio = { version = "1.40", features = ["macros", "time", "sync"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
tauri-specta = { version = "1.0", features = ["javascript", "typescript"] }
specta = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
regex = "1"
syntect = "5"
dotenv = "0.15"
rayon = "1.10"
anyhow = { version = "1", features = ["backtrace"] }
futures = "0.3"
langchain-rust = "4.4"
futures-util = "0.3.30"
strum = "0.26.3"
strum_macros = "0.26.4"
lazy_static = "1"
anyhow-tauri = "1"


[target.'cfg(target_os = "macos")'.dependencies]
macos-app-nap = "0.0"
cocoa = "0.25"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
incremental = true
