# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "byok"
version = "0.1.0"
description = "Bring your own keys"
authors = ["you"]
edition = "2021"

[lib]
name = "byok2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.16"
tokio = { version = "1.40", features = ["macros", "time", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
uuid = { version = "1", features = ["serde", "v4"] }
regex = "1.12"
syntect = "5.3"
dotenv = "0.15"
rayon = "1.11"
anyhow = { version = "1.0", features = ["backtrace"] }
futures = "0.3"
langchain-rust = "4.6"
futures-util = "0.3"
strum = "0.27"
strum_macros = "0.27"
lazy_static = "1.5"
anyhow-tauri = "1.0"
derive_more = { version = "2.0", features = ["deref", "deref_mut"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }


[target.'cfg(target_os = "macos")'.dependencies]
macos-app-nap = "0.0"
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
incremental = true
